--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="./recipes/grilled-chicken.html">Rosemary Lemon Grilled Chicken</a></li>
+        </ul>
     </body>
 </html>
