Add link to homepage
I needed to link the recipe page with the homepage.

--- a/recipes/grilled-chicken.html
+++ b/recipes/grilled-chicken.html
@@ -6,6 +6,8 @@
         <title>Grilled Chicken</title>
     </head>
     <body>
-        <h1>Rosemary Lemon Grilled Chicken/h1>
+        <h1>Rosemary Lemon Grilled Chicken</h1>
+
+        <a href="./../index.html">Go back to Homepage</a>
     </body>
 </html>
