--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/grilled-chicken.html">Rosemary Lemon Grilled Chicken</a></li>
+            <li><a href="./recipes/roasted-potatoes.html">Roasted New Red Potatoes</a></li>
+            <li><a href="./recipes/glazed-carrots.html">Lemon-Glazed Carrots</a></li>
         </ul>
     </body>
 </html>
